--- a/tcc-front-end/src/index.html
+++ b/tcc-front-end/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TccFrontEnd</title>
+  <title>Quem Indica?</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body class="hold-transition skin-blue sidebar-mini login-page">
   <app-root></app-root>
